--- a/DogT/Views/DogHandler/AddDog.cshtml
+++ b/DogT/Views/DogHandler/AddDog.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Фото</label>
-                <input name="formFile" type="file" class="form-control" />
+                <input name="formFile" type="file" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Додати" class="btn btn-primary" />
