--- a/DogT/Views/DogHandler/Dogs.cshtml
+++ b/DogT/Views/DogHandler/Dogs.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DogT.Models.Dog>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Собаки";
     Layout = "_DogHandler";
 }
 
