--- a/DogT/Views/Shared/_Admin.cshtml
+++ b/DogT/Views/Shared/_Admin.cshtml
@@ -25,16 +25,16 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dogs">Собаки</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dogs">Кінологи</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="DogHandlers">Кінологи</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dogs">Тренування</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Trainings">Тренування</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Tasks">Завдання</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dogs">Новини/пропозиції</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="News">Новини/пропозиції</a>
                             </li>
 
                             <li class="nav-item logout_block">
