--- a/DogT/Views/Admin/AddDog.cshtml
+++ b/DogT/Views/Admin/AddDog.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddDog">
+        <form asp-action="AddDog" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -23,11 +23,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="DogHandlerId" class="control-label"></label>
-                <select asp-for="DogHandlerId" class ="form-control" asp-items="ViewBag.DogHandlers"></select>
+                <select asp-for="DogHandlerId" class="form-control" asp-items="ViewBag.DogHandlers"></select>
             </div>
             <div class="form-group">
                 <label asp-for="SpecializationId" class="control-label"></label>
-                <select asp-for="SpecializationId" class ="form-control" asp-items="ViewBag.Specializations"></select>
+                <select asp-for="SpecializationId" class="form-control" asp-items="ViewBag.Specializations"></select>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Фото</label>
+                <input name="formFile" type="file" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Додати" class="btn btn-primary" />
