--- a/DogT/Views/Admin/Dogs.cshtml
+++ b/DogT/Views/Admin/Dogs.cshtml
@@ -1,54 +1,35 @@
 ﻿@model IEnumerable<DogT.Models.Dog>
 
 @{
-    ViewData["Title"] = "Список службових собак";
+    ViewData["Title"] = "Собаки";
     Layout = "_Admin";
 }
 
-<h4>Список службових собак</h4>
+<div class="dogs">
+    <a asp-action="AddDog" class="dog">
+        <div class="dog_img">
+            <i class="fas fa-plus empty_dog_img"></i>
+        </div>
+        <h6 class="dog_title">Додати собаку</h6>
+    </a>
 
-<p>
-    <a asp-action="AddDog">Додати службового собаку</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DogHandler)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Specialization)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                <a asp-action="DetailsDog" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Name)</a>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DogHandler.Name)
-                @Html.DisplayFor(modelItem => item.DogHandler.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Specialization.Title)
-            </td>
-            <td>
-                <a asp-action="EditDog" asp-route-id="@item.Id">Редагувати інформацію</a> |
-                <a asp-action="ExcludeDog" asp-route-id="@item.Id">Списати</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    @foreach (var dog in Model)
+    {
+        <a class="dog" asp-action="DetailsDog" asp-route-id="@dog.Id">
+            @if (dog.Avatar == null)
+            {
+                <div class="dog_img">
+                    <i class="fas fa-dog empty_dog_img"></i>
+                </div>
+                <h6 class="dog_title">@dog.Name</h6>
+            }
+            else
+            {
+                <div class="dog_img dog_img_set"
+                     style="background-image: url(@dog.AvatarPath)">
+                </div>
+                <h6 class="dog_title">@dog.Name</h6>
+            }
+        </a>
+    }
+</div>
