--- a/DogT/Views/Admin/Tasks.cshtml
+++ b/DogT/Views/Admin/Tasks.cshtml
@@ -14,43 +14,77 @@
     </a>
 </div>
 
-    <div class="trainings">
-        <table class="table">
-            <thead class="thead-dark">
+<div class="trainingTasks">
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col" class="training_table_num">№</th>
+                <th scope="col" class="training_table_date">Дата початку</th>
+                <th scope="col" class="training_table_date">Кінолог</th>
+                <th scope="col" class="training_table_estimate">Собака</th>
+                <th scope="col" class="training_table_estimate">Зміст</th>
+                <th scope="col" class="training_table_date">Крайній термін</th>
+                <th scope="col" class="training_table_estimate">Статус</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (Model.Count() == 0)
+            {
                 <tr>
-                    <th scope="col">№</th>
-                    <th scope="col">Кінолог</th>
-                    <th scope="col">Собака</th>
-                    <th scope="col">Зміст</th>
-                    <th scope="col">Дата початку</th>
-                    <th scope="col">Крайній термін</th>
+                    <td>Завдання відсутні</td>
                 </tr>
-            </thead>
-            <tbody>
-                @if (Model.Count() == 0)
+            }
+            else
+            {
+                var num = 1;
+                foreach (var trainingTask in Model)
                 {
-                    <tr>
-                        <td>Завдання відсутні</td>
-                    </tr>
-                }
-                else
-                {
-
-                    var num = 1;
-
-                    foreach (var task in Model)
+                    if (trainingTask.IsCompleted)
                     {
-                        <tr>
+                        <tr class="task_completed">
                             <th scope="row">@num</th>
-                            <td>@task.DogHandler.Name @task.DogHandler.Surname</td>
-                            <td>@task.Dog.Name</td>
-                            <td>@task.Context</td>
-                            <td>@task.Date</td>
-                            <td>@task.Deadline</td>
+                            <td>@trainingTask.Date</td>
+                            <td>@trainingTask.DogHandler.Name @trainingTask.DogHandler.Surname</td>
+                            <td>@trainingTask.Dog.Name</td>
+                            <td>@trainingTask.Context</td>
+                            <td>@trainingTask.Deadline</td>
+
+                            <td>
+                                @if (trainingTask.IsCompleted != true)
+                                {
+                                    <form asp-action="TaskCompleted" asp-route-id="@trainingTask.Id">
+                                        <div class="form-group">
+                                            <input class="btn btn-primary" type="submit" value="Виконано" />
+                                        </div>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@trainingTask.Id">В архів</a>
+                                }
+
+                            </td>
                         </tr>
                         num++;
                     }
-                }
-            </tbody>
-        </table>
-    </div>
+                    else
+                    {
+                        <tr class="task_uncompleted">
+                            <th scope="row">@num</th>
+                            <td>@trainingTask.Date</td>
+                            <td>@trainingTask.DogHandler.Name @trainingTask.DogHandler.Surname</td>
+                            <td>@trainingTask.Dog.Name</td>
+                            <td>@trainingTask.Context</td>
+                            <td>@trainingTask.Deadline</td>
+
+                            <td>
+                                <a class="btn btn-primary" asp-action="Delete" asp-route-id="@trainingTask.Id">В архів</a>
+                            </td>
+                        </tr>
+                                        num++;
+                                    }
+                                }
+                            }
+        </tbody>
+    </table>
+</div>
