--- a/DogT/Views/DogHandler/DetailsTraining.cshtml
+++ b/DogT/Views/DogHandler/DetailsTraining.cshtml
@@ -11,11 +11,11 @@
             <h3 class="dog_name">@Model.Dog.Name</h3>
         </div>
     </div>
-    <a asp-action="DetailsDog" asp-route-id="@Model.Dog.Id" class="dog">
+    <a asp-action="Index" class="dog">
         <div class="dog_img">
             <i class="fas fa-ellipsis-h empty_dog_img"></i>
         </div>
-        <h6 class="dog_title">До списку тренувань</h6>
+        <h6 class="dog_title">Назад</h6>
     </a>
     <div class="training_detail">
         <h5 class="training_detail_title">
