--- a/DogT/Views/Shared/_DogHandler.cshtml
+++ b/DogT/Views/Shared/_DogHandler.cshtml
@@ -44,6 +44,9 @@
                             <li class="nav-item">
                                 <div class="page_seperator"></div>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DogHandler" asp-action="Proposals">Пропозиції/Зауваження</a>
+                            </li>
                             <li class="nav-item logout_block">
                                 <form asp-controller="Account" asp-action="Logout">
                                     <button type="submit">
